[gd_scene load_steps=6 format=3 uid="uid://cnyxdi26j8go0"]

[ext_resource type="Theme" uid="uid://bfqvhpwoqicre" path="res://assets/resource/theme/main_theme.tres" id="1_5seff"]
[ext_resource type="Script" path="res://gui/panel/options_panel/options_panel.gd" id="2_p582r"]
[ext_resource type="LabelSettings" uid="uid://cxeym524iwyrf" path="res://assets/resource/theme/label_settings/title_medium.tres" id="3_jfbo0"]
[ext_resource type="LabelSettings" uid="uid://r6qglaie1pk0" path="res://assets/resource/theme/label_settings/content_large.tres" id="4_7k06w"]
[ext_resource type="PackedScene" uid="uid://bwweoq10c48qi" path="res://extra/sfx/sfx_control.tscn" id="5_eocg6"]

[node name="OptionsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5seff")
script = ExtResource("2_p582r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.305882, 0.454902, 0.780392)

[node name="OptionPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252778
anchor_top = 0.1075
anchor_right = 0.747222
anchor_bottom = 0.8925
offset_left = 19.9998
offset_top = 30.0
offset_right = -19.9998
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="OptionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = ExtResource("3_jfbo0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionContainer" type="GridContainer" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/h_separation = 49
theme_override_constants/v_separation = 10
columns = 2

[node name="BGMLabel" type="Label" parent="OptionPanel/MarginContainer/VBoxContainer/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BGM"
label_settings = ExtResource("4_7k06w")

[node name="BGMSlider" type="HSlider" parent="OptionPanel/MarginContainer/VBoxContainer/OptionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SFXLabel" type="Label" parent="OptionPanel/MarginContainer/VBoxContainer/OptionContainer"]
layout_mode = 2
text = "SFX"
label_settings = ExtResource("4_7k06w")

[node name="SFXSlider" type="HSlider" parent="OptionPanel/MarginContainer/VBoxContainer/OptionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SaveButton" type="Button" parent="OptionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="sfx_control" parent="." instance=ExtResource("5_eocg6")]
root_node = NodePath("../OptionPanel")

[connection signal="value_changed" from="OptionPanel/MarginContainer/VBoxContainer/OptionContainer/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="OptionPanel/MarginContainer/VBoxContainer/OptionContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="OptionPanel/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
